--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,15 +5,15 @@ env:
     JAVA_HOME: "/usr/lib/jvm/java-8-openjdk-amd64"
 
 phases:
-  install:
-    commands:
-    - echo installing maven...
-    - apt-get update -y
-    - apt-get install -y maven
+  #install:
+  #  commands:
+  #  - echo installing maven...
+  #  - apt-get update -y
+  #  - apt-get install -y maven
   build:
     commands:
-    - echo building the justiceleague-tracker
-    - mvn install
+    - echo building the Java Application
+    - mvn clean install -DskipTests
 artifacts:
   files:
   - target/*.jar
