--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,8 @@
 version: 0.2
 
-env:
-  variables:
-    JAVA_HOME: "/usr/bin/java"
+#env:
+  #variables:
+    #JAVA_HOME: "/usr/bin/java"
 
 phases:
   #install:
