--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
 - source: /
-  destination: /home/ec2-user
+  destination: /opt
 hooks:
   AfterInstall:
   - location: fix_previleges.sh
@@ -12,7 +12,7 @@ hooks:
   - location: start_server.sh
     timeout: 300
     runas: root
-  ApplicationStop:
-  - location: stop_server.sh
-    timeout: 300
-    runas: root
+  #ApplicationStop:
+  #- location: stop_server.sh
+  #  timeout: 300
+  #  runas: root
