--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,11 +5,12 @@ version: 0.2
     #JAVA_HOME: "/usr/bin/java"
 
 phases:
-  #install:
-  #  commands:
-  #  - echo installing maven...
-  #  - apt-get update -y
-  #  - apt-get install -y maven
+  install:
+    commands:
+    - echo installing Java and Maven...
+    - apt-get update -y
+    - apt-get install openjdk-8-jdk
+    - apt-get install -y maven
   build:
     commands:
     - echo Build started on `date`
