--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,11 +7,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      java: openjdk-8-jdk
-    commands:
-    - echo installing Java and Maven...
-    - apt-get update -y
-    - apt-get install -y maven
+      java: corretto8
   build:
     commands:
     - echo Build started on `date`
